# minimalistic-map-importer

./: CMakeLists.txt  study_material.txt
demo/: map.map  test_reference.cpp
demo/autosave/: map.1.map  map.2.map  map.3.map  map.4.map
include/mmapi/: entity.h  math.h  mmapi.h
reference/: WAD3.cpp  WAD3.h  csg.cpp  entity.h  map.cpp  map.h  map.map  read_file_bytes.h  redefinitions.h  test_reference.cpp  texture.cpp
shaders/: geometry.frag  geometry.vert
src/: WAD3.h  brush.h  csg.cpp  entity.cpp  entity.h  map.cpp  map.h  math.h  poly.cpp  property.cpp  read_file_bytes.h  texture.cpp
